cmake_minimum_required(VERSION 3.28)
project(module03)

set(CMAKE_CXX_STANDARD 23)

add_executable(module03-1 exercise01.cpp vehicle.h vehicle.cpp)
add_executable(module03-2 exercise02.cpp vehicle.h vehicle.cpp)
add_executable(module03-3 exercise03.cpp vehicle.h vehicle.cpp)
add_executable(module03-4 exercise04.cpp vehicle.h vehicle.cpp)
add_executable(module03-5 exercise05.cpp vehicle.h vehicle.cpp)
add_executable(module03-6 exercise06.cpp vehicle.h vehicle.cpp)
